--- a/Horario/HTML/index.html
+++ b/Horario/HTML/index.html
@@ -109,7 +109,7 @@
             <td id="nada3"></td>
         </tr>
     </table>
-    <a href=""><img id="chichas" src="../Img/chihuahua.png"></a>
+    <a href="../HTML/form.html"><img id="chichas" src="../Img/chihuahua.png"></a>
     <!-- El siguiente script está enlazado con un archivo de javascript y el atributo defer es para asegurarme de que se ejecute al haber cargado la página web -->
     <script src="../JS/JavaScript.js" defer></script>
 </body>
